--- a/themes/tranquilpeak/languages/zh-cn.yml
+++ b/themes/tranquilpeak/languages/zh-cn.yml
@@ -10,6 +10,7 @@ global:
     archives: "归档"
     search: "搜索"
     about: "关于"
+    picture: "相册"
     github: "GitHub"
     stack_overflow: "Stack Overflow"
     twitter: "Twitter"
