--- a/themes/tranquilpeak/languages/zh-cn.yml
+++ b/themes/tranquilpeak/languages/zh-cn.yml
@@ -60,6 +60,12 @@ post:
 
 author:
     # 你的个人简介 (支持 Markdown 和 HTML 语法)
-    bio: "while(true)  {\ncoding()\n}     "
+    bio: "
+        ```
+        while(true)  {
+           \r\ncoding()\r\n
+        }
+        ```
+        "
     # 你的工作简介
     job: "Lenovo"
